--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,56 @@
  *= require_tree .
  *= require_self
  */
+
+@import url(https://fonts.googleapis.com/css?family=Bowlby+One+SC|Raleway:700,500);
+
+* {
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
+  text-decoration: none;
+  font-family: 'Raleway', sans-serif;
+}
+
+html, body {
+  height: 100%;
+  background-color: rgb(72,61,139);
+}
+
+.box {
+  background-color: white;
+  width: 90%;
+  min-height: 100%;
+}
+
+h1 {
+  font-size: 10em;
+  font-family: 'Bowlby One SC', cursive;
+}
+
+.hi:hover span {
+  display: block;
+}
+
+.info {
+  display: none;
+}
+
+.container, .form * {
+  margin-top: 1em;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+}
+
+.container {
+  margin-bottom: 1em;
+}
+
+input {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
+}
+
+a {
+  font-weight: 500;
+}
