--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,5 +23,5 @@
     </div>
   </div>
 
-  <span class="hi">?<span class="info">Upload any text of any size and let BookChomp create a delicious set of samples. Choose from a tiny taste to a full chomp of all the data, randomly recomposed for your pleasure. Just copy the relevant link. Warning: chomps are only as quality as the text going in.</span></span>
+  <abbr title="Upload any text of any size and let BookChomp create a delicious set of samples. Choose from a tiny taste to a full chomp of all the data, randomly recomposed for your pleasure. Just copy the relevant link. Warning: chomps are only as quality as the text going in." class="hi">?</span>
 </div>
